Fix 'Stereotype reference count issue on close, open or new document'.

We also need to avoid dangled stereotype pointer by using
a QPointer instance for UMLObject::m_stereotype.

FIXED-IN:2.17.2 (KDE Applications 15.08.2)
BUG:345546